// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<IDPSection /> should render (IDPs pending) 1`] = `
<Card>
  <CardTitle>
    <Skeleton
      isDark={false}
      size="md"
    />
  </CardTitle>
  <CardBody>
    <Skeleton
      isDark={false}
      size="lg"
    />
  </CardBody>
  <CardFooter>
    <Skeleton
      isDark={false}
      size="md"
    />
  </CardFooter>
</Card>
`;

exports[`<IDPSection /> should render (no IDPs) 1`] = `
<Card>
  <CardBody>
    <Title
      className="card-title"
      headingLevel="h2"
      size="lg"
    >
      Identity providers
    </Title>
    <p>
      Configure identity providers to allow users to log into the cluster.
       
      <a
        href="https://docs.openshift.com/container-platform/latest/authentication/understanding-identity-provider.html"
        rel="noopener noreferrer"
        target="_blank"
      >
        Learn more.
      </a>
    </p>
    <ButtonWithTooltip
      className="access-control-add"
      disableReason="You do not have permission to add an identity provider. Only cluster owners and organization administrators can add identity providers."
      onClick={[Function]}
      variant="secondary"
    >
      Add identity provider
    </ButtonWithTooltip>
  </CardBody>
</Card>
`;

exports[`<IDPSection /> should render (with IDPs) 1`] = `
<Card>
  <CardBody>
    <Title
      className="card-title"
      headingLevel="h2"
      size="lg"
    >
      Identity providers
    </Title>
    <p>
      Configure identity providers to allow users to log into the cluster.
       
      <a
        href="https://docs.openshift.com/container-platform/latest/authentication/understanding-identity-provider.html"
        rel="noopener noreferrer"
        target="_blank"
      >
        Learn more.
      </a>
    </p>
    <Table
      actionResolver={[Function]}
      areActionsDisabled={[Function]}
      aria-label="Identity Providers"
      borders={true}
      canSelectAll={true}
      canSortFavorites={true}
      cells={
        Array [
          Object {
            "title": "Name",
            "transforms": Array [
              [Function],
            ],
          },
          Object {
            "title": "Type",
            "transforms": Array [
              [Function],
            ],
          },
          Object {
            "title": "Auth callback URL",
            "transforms": Array [
              [Function],
            ],
          },
        ]
      }
      className=""
      contentId="expanded-content"
      dropdownDirection="down"
      dropdownPosition="right"
      expandId="expandable-toggle"
      gridBreakPoint="grid-md"
      isStickyHeader={false}
      isTreeTable={false}
      ouiaSafe={true}
      role="grid"
      rowLabeledBy="simple-node"
      rows={
        Array [
          Object {
            "cells": Array [
              "hello",
              "GitHub",
              Object {
                "title": <ClipboardCopyLinkButton
                  className="access-control-tables-copy"
                  isDisabled={false}
                  text="https://oauth-openshift.com/oauth2callback/hello"
                >
                  Copy URL to clipboard
                </ClipboardCopyLinkButton>,
              },
            ],
            "idpID": "id",
          },
          Object {
            "cells": Array [
              "hi",
              "Google",
              Object {
                "title": <ClipboardCopyLinkButton
                  className="access-control-tables-copy"
                  isDisabled={false}
                  text="https://oauth-openshift.com/oauth2callback/hi"
                >
                  Copy URL to clipboard
                </ClipboardCopyLinkButton>,
              },
            ],
            "idpID": "id",
          },
        ]
      }
      selectVariant="checkbox"
      variant="compact"
    >
      <TableHeader />
      <Component />
    </Table>
    <ButtonWithTooltip
      className="access-control-add"
      disableReason="You do not have permission to add an identity provider. Only cluster owners and organization administrators can add identity providers."
      onClick={[Function]}
      variant="secondary"
    >
      Add identity provider
    </ButtonWithTooltip>
  </CardBody>
</Card>
`;
